--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "",
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.5",
@@ -28,7 +29,8 @@
     "reselect": "4.1.5",
     "typescript": "4.4.2",
     "uuid": "8.3.2",
-    "web-vitals": "2.1.0"
+    "web-vitals": "2.1.0",
+    "webpack": "^5.87.0"
   },
   "scripts": {
     "start": "react-scripts start",
